<resources>
    <string name="app_name">LetsMeet</string>
    <string name="login">Zaloguj</string>
    <string name="password_hint">Hasło...</string>
    <string name="login_hint">Login...</string>
    <string name="or">lub</string>
    <string name="cerate_account">...załóż konto</string>
    <string name="error_max_characters_reached">Limit znaków wynosi</string>


    <string name="authority">letsmeet.piotrek.io</string>
    <string name="c_id">;TLQO0gF2DW6O5_J2jWQt8H!DKowF3EpRfV8RQDh</string>
    <string name="ss">fSOa;H3a_qZ70vYhljGmqfgmSvmgL@tWU@wRO@1Nr7Fo8wmF;cm6n491dv37Ga5ycbebzvP=rV;-uVdlBmhxIyDr9jMpiZprrAwgDqh2.EhiYbKju4COQE28T=.e2CRS</string>
    <string name="name">Imię...</string>
    <string name="surname">Nazwisko</string>
    <string name="email">Email</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="register">Zarejestruj</string>
    <string name="login_password_empty">Pola login i hasło nie mogą być puste</string>
    <string name="all_fields_mandatory">Wszystkie pola w formularzu są obowiązkowe</string>
    <string name="password_empty">Błędne hasło</string>
    <string name="login_empty">Błędny login</string>
    <string name="empty_field">Niepoprawne dane</string>
    <string name="paswords_not_matching">Wprowadzone hasła różnią się od siebie</string>
    <string name="register_label">Rejestracja</string>
    <string name="permission_error">Bez przydzielonych uprawnień nie jest możliwe skorzystanie z tej funkcjonalności</string>
    <string name="permission_error_never_ask">Aby ponownie ustawić pozwolenie wejdź do Ustawień         urządzenia i zezwól aplikacji LetsMeet na dostęp do Pamięci</string>
    <string name="error_logging">Login lub hasło niepoprawne! Wpisz poprawne dane i spróbuj ponownie</string>
    <string name="error_register">Sprawdź ponownie wszystkie pola i spróbuj jeszcze raz</string>
    <string name="errorPassReq">Hasło nie spełnia wymogów bezpieczeństwa:\n-minimum 6 znaków\n-małe
        i duże litery\n-znaki specjalne lub cyfry.
    </string>


    <!--Menu drawer items-->
    <string name="nav_drawer_group_events">Wydarzenia</string>
    <string name="nav_drawer_item_search">Znajdź wydarzenie/ Rezerwacje</string>
    <string name="nav_drawer_item_event_add">Dodaj nowe wydarzenie</string>
    <string name="nav_drawer_item_my_events">Moje wydarzenia</string>
    <string name="nav_drawer_group_account">Użytkownik</string>
    <string name="nav_drawer_item_account">Moje konto</string>
    <string name="nav_drawer_item_change_password">Zmień hasło</string>
    <string name="nav_drawer_item_logout">Wyloguj</string>


</resources>
