<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_drawer_group_events">
        <menu>
            <item
                android:id="@+id/navSearch"
                android:title="@string/nav_drawer_item_search"/>
            <item
                android:id="@+id/navEventAdd"
                android:title="@string/nav_drawer_item_event_add"/>
            <item
                android:id="@+id/navMyEvents"
                android:title="@string/nav_drawer_item_my_events"/>
        </menu>
    </item>

    <item android:title="@string/nav_drawer_group_account">
        <menu>
            <item
                android:id="@+id/navAccount"
                android:title="@string/nav_drawer_item_account"/>
            <item
                android:id="@+id/navChangePassword"
                android:title="@string/nav_drawer_item_change_password"/>
            <item
                android:id="@+id/navLogout"
                android:title="@string/nav_drawer_item_logout"/>
        </menu>
    </item>
</menu>