<?xml version="1.0" encoding="utf-8"?>
<layout
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fb="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_main"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <LinearLayout
                style="@style/LetsMeetFragmentWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/RegisterLabel"
                    android:text="@string/register_label"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fontPath="fonts/Dosis-Regular.otf"
                    />

                <soot.letsmeet.customviews.DashedDivider
                    android:id="@+id/TopDivider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/FragmentAccountDividerHeight"
                    android:layout_marginBottom="@dimen/FragmentRegisterButtonMarginBottom"
                    android:layout_marginTop="@dimen/FragmentRegisterButtonMarginTop"
                    android:src="@drawable/shape_line_dashed" />


                <soot.letsmeet.customviews.CustomTextImputLayout
                    android:id="@+id/RegisterName"
                    android:hint="@string/name"
                    style="@style/CustomEditTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/EditTextButtonHeight" />

                <soot.letsmeet.customviews.CustomTextImputLayout
                    android:id="@+id/RegisterSurname"
                    android:hint="@string/surname"
                    style="@style/CustomEditTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/EditTextButtonHeight" />

                <soot.letsmeet.customviews.CustomTextImputLayout
                    android:id="@+id/RegisterMail"
                    android:hint="@string/email"
                    style="@style/CustomEditTextMailInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/EditTextButtonHeight" />

                <soot.letsmeet.customviews.CustomTextImputLayout
                    android:id="@+id/RegisterPassword"
                    android:hint="@string/password_hint"
                    style="@style/CustomEditTextPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/EditTextButtonHeight" />

                <soot.letsmeet.customviews.CustomTextImputLayout
                    android:id="@+id/RegisterRepeatPassword"
                    android:hint="@string/repeat_password"
                    style="@style/CustomEditTextPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/EditTextButtonHeight" />

                <soot.letsmeet.customviews.DashedDivider
                    android:id="@+id/DividerMiddle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/FragmentAccountDividerHeight"
                    android:layout_marginBottom="@dimen/FragmentRegisterButtonMarginBottom"
                    android:layout_marginTop="@dimen/FragmentRegisterButtonMarginTop"
                    android:src="@drawable/shape_line_dashed" />

                <Button
                    android:id="@+id/RegisterButtonRegister"
                    style="@style/LetsMeetButton"
                    android:text="@string/register"
                    android:layout_width="match_parent"
                    android:onClick="registerClick"
                    android:layout_height="@dimen/EditTextButtonHeight" />
            </LinearLayout>
        </ScrollView>
        <soot.letsmeet.customviews.ProgressCustomView
            android:id="@+id/register_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</layout>