<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fontPath="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main"
        >

    <LinearLayout
        android:id="@+id/Check"
        style="@style/LoginLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/fragmentLoginLogo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/FragmentLoginLogoHeight"
                    android:src="@drawable/logo" />

                <soot.letsmeet.customviews.CustomTextImputLayout
                    android:layout_gravity="center_vertical"
                    android:hint="@string/login_hint"
                    android:id="@+id/loginInput"
                    style="@style/CustomEditTextMailInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/EditTextButtonHeight"/>

                <soot.letsmeet.customviews.CustomTextImputLayout
                    android:id="@+id/passwordInput"
                    android:hint="@string/password_hint"
                    style="@style/CustomEditTextPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/EditTextButtonHeight"
                   />


                <Button
                    android:id="@+id/loginButtonLogin"
                    android:text="@string/login"
                    style="@style/LetsMeetButton"
                    android:onClick="loginClick"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/EditTextButtonHeight"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    fontPath="fonts/Dosis-Regular.otf"/>

                <!--<FrameLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<world.letsmeet.Views.Layouts.LetsMeetFacebookLogin-->
                <!--android:id="@+id/FragmentLoginButtonLoginFacebook"-->
                <!--style="@style/LetsMeetFacebookButton"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="@dimen/EditTextButtonHeight"-->
                <!--fb:login_text="@string/FragmentLoginButtonLoginFacebook"-->
                <!--/>-->

                <!--<ImageView-->
                <!--android:id="@+id/FragmentLoginButtonLoginFacebookIcon"-->
                <!--&lt;!&ndash;style="@style/LetsMeetFacebookButtonIcon"&ndash;&gt;-->
                <!--android:layout_width="@dimen/LetsMeetFacebookButtonIconSize"-->
                <!--android:layout_height="@dimen/LetsMeetFacebookButtonIconSize" />-->
                <!--</FrameLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <soot.letsmeet.customviews.DashedDivider
                        android:id="@+id/fragmentAccountDividerMiddle"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/FragmentAccountDividerHeight"
                        android:layout_marginBottom="@dimen/FragmentRegisterButtonMarginBottom"
                        android:layout_marginTop="@dimen/FragmentRegisterButtonMarginTop"
                        android:layout_weight="1"
                        android:src="@drawable/shape_line_dashed" />

                    <TextView
                        android:id="@+id/between_deviders"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/EditTextButtonHeight"
                        android:text="@string/or"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        />

                    <soot.letsmeet.customviews.DashedDivider
                        android:layout_width="0dp"
                        android:layout_height="@dimen/FragmentAccountDividerHeight"
                        android:layout_weight="1"
                        android:src="@drawable/shape_line_dashed" />
                </LinearLayout>

                <TextView
                    android:id="@+id/fragmentLoginButtonLoginCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/EditTextButtonHeight"
                    android:gravity="center"
                    android:text="@string/cerate_account"
                    android:onClick="registerClick"
                    android:textColor="@color/text_on_white_background"
                    fontPath="fonts/Dosis-Regular.otf"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    </FrameLayout>
</layout>